# densecrf_ho

./: .gitignore  .run_lp_MSRC_test.sh.swp  CMakeLists.txt  README.md  gprof.out.old  run.txt  run_full.sh  run_lp_MSRC_test.sh  run_lp_MSRC_train.sh  run_lp_mf_train1.sh  run_lp_mf_train2.sh  run_lp_mf_train3.sh  run_lp_mf_train4.sh  run_lp_pascal1.sh  run_lp_pascal2.sh  run_lp_test.sh  run_lp_test_mf.sh  run_lp_train.sh  run_lp_train1.sh  run_lp_train2.sh  run_lp_train3.sh  run_lp_train_mf.sh  run_qp_test.sh  run_qp_train1.sh  run_qp_train2.sh  run_qp_train3.sh  run_qp_train4.sh  run_test_set.py
CV/: cv-results.txt  run_5fcv.py  test.py
CV/AllParameters-FixedDC-CCV/: config.json  exp-DC-CCV.py
CV/AllParameters-LP/: config.json  exp-lp_cv.py
CV/AllParameters-LP/CV1/: config.json  exp-lp_cv1.py
CV/AllParameters-LP/CV2/: config.json  exp-lp_cv2.py
CV/AllParameters-LP/CV3/: config.json  exp-lp_cv3.py
CV/AllParameters-LP/CV4/: config.json  exp-lp_cv4.py
CV/AllParameters-LP/CV5/: config.json  exp-lp_cv5.py
CV/AllParameters-LPSP/: config.json  exp-lpsp_cv.py
CV/AllParameters-LPSP/CV1/: config.json  exp-lpsp_cv1a.py
CV/AllParameters-LPSP/CV2/: config.json
CV/AllParameters-LPSP/CV3/: config.json
CV/AllParameters-LPSP/CV4/: config.json
CV/AllParameters-LPSP/CV5/: config.json
CV/AllParameters-MF/: config.json  exp-mf.py
CV/AllParameters-MF5/: config.json  exp-mf5.py
CV/AllParameters-PROX_LP/: config.json  exp-prox_lp.py
CV/AllParameters-QPNC/: config.json  exp-qpnc.py
CV/AllParameters-QPNC/CV1/: config.json
CV/AllParameters-QPNC/CV2/: config.json  exp-qpnc_cv2.py
CV/AllParameters-QPNC/CV3/: config.json  exp-qpnc_cv3.py
CV/AllParameters-QPNC/CV4/: config.json  exp-qpnc_cv4.py
CV/AllParameters-QPNC/CV5/: config.json  exp-qpnc_cv5.py
CV/AllParameters-QPSP/: config.json  exp-qpsp.py
CV/AllParameters-QPSP/CV1/: config.json  exp-qpsp_cv1.py
CV/AllParameters-QPSP/CV2/: config.json  exp-qpsp_cv2.py
CV/AllParameters-QPSP/CV3/: config.json  exp-qpsp_cv3.py
CV/AllParameters-QPSP/CV4/: config.json  exp-qpsp_cv4.py
CV/AllParameters-QPSP/CV5/: config.json  exp-qpsp_cv5.py
CV/AllParameters-QPSP_bloc/CV1/: config.json  exp-qpspb_cv1.py
CV/AllParameters-QPSP_bloc/CV2/: config.json  exp-qpspb_cv2.py
CV/AllParameters-QPSP_bloc/CV3/: config.json  exp-qpspb_cv3.py
CV/AllParameters-QPSP_bloc/CV4/: config.json  exp-qpspb_cv4.py
CV/AllParameters-QPSP_bloc/CV5/: config.json  exp-qpspb_cv5.py
CV/AllParameters-SG_LP/: config.json  exp-sg_lp.py
CV/AllParameters-concave_QPCCCP/: config.json  exp-concave_qpcccp.py
CV/Allparameters/: best_result.txt  config.json  experiment-allparam.py
CV/Allparameters-QP/: config.json  exp-lrqp.py  experiment-allparam-qp.py
CV/Allparameters-QP/output/: 00000001.out  00000002.out  00000003.out  00000004.out  00000005.out  00000006.out  00000007.out  00000008.out  00000009.out  00000010.out  00000011.out  00000012.out
CV/Allparameters-QPCCCP/: config.json  exp-qpcccp.py  experiment-allparam-qpcccp.py  voc_test.m
CV/LPParameters-PROX_LP/: config.json  lpexp-prox_lp.py
CV/OneParameter-pairweight/: config.json  experiment-oneparam.py  get_all_scores.py  make_plot.py
CV/OneParameter-pairweight-diag/: config.json  experiment-oneparam.py  get_all_scores.py  make_plot.py
alpha/: .dir-locals.el  CMakeLists.txt  alpha_crf.cpp  alpha_crf.hpp  brute_force.cpp  brute_force.hpp  color_to_label.cpp  color_to_label.hpp  cv-script.cpp  eigen_utils.cpp  eigen_utils.hpp  evaluate_on_dataset.cpp  evaluation.cpp  evaluation.hpp  example_inference.cpp  file_storage.cpp  file_storage.hpp  grid_search.cpp  import numpy as np  inference.cpp  inference.hpp  mean_shift_gen.cpp  newton_cccp.cpp  newton_cccp.hpp  non_convex.cpp  pairwise_learning.cpp  qp.cpp  qp.hpp  runibfs.cpp  runibfs.hpp  stereo.cpp  throwaway.cpp  toy-problem.cpp  toy-problem.hpp  util.hpp
alpha/scripts/: accuracy.py  comma_separated.m  compare_energies.m  energies.py  energy_accuracy_table.m  plot.py  plot_old_new_ph_timings.m  run_stereos.py  run_stereos.sh  trace_plot.m  voc_test.m  voc_test1.m
data/: img.c_unary
examples/: dense_inference.cpp
include/: CMakeLists.txt  densecrf.h  pairwise.h  permutohedral.h
include/mean-shift/: libppm.h  msImageProcessor.h
src/: CMakeLists.txt  densecrf.cpp  eigen_utils.cpp  example_inference.cpp  file_storage.cpp  labelcompatibility.cpp  optimization.cpp  pairwise.cpp  permutohedral.cpp  qp.cpp
src/mean-shift/: CMakeLists.txt  libppm.cpp  main.cpp  msImageProcessor.cpp  msSys.cpp
tools/: .energies.py.swp  CVmsrc_test.m  lp_trace_plot.py  msrc_test.m  seg_mat_to_bmp.m  voc_test.m
